# Asteria-malf-pas

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: params_default.toml  settings.py
docs/: BACKTEST_DESIGN.md  DATA_STORAGE_DESIGN.md  M1_SUMMARY.md  MALF_DESIGN.md  PAS_DESIGN.md  README.md  REBUILD_PLAN.md  TEST_ACCEPTANCE.md
docs/01-system-structure/: ARCHITECTURE.md
docs/02-module-design/: BACKTEST_DESIGN.md  DATA_STORAGE_DESIGN.md
docs/03-task-breakdown/: REBUILD_PLAN.md  TEST_ACCEPTANCE.md
docs/04-implementation-records/: M2_SUMMARY.md  M3_SUMMARY.md  M4_SUMMARY.md  TRADING_METHOD_REFINEMENT.md  VALIDATION_FINDINGS.md
scripts/: analyze_run.py  ingest_data.py  run_backtest.py  run_malf.py  validate_method.py
src/asteria/: __init__.py
src/asteria/backtest/: __init__.py  broker.py  engine.py  metrics.py  rules.py  runner.py  types.py
src/asteria/malf/: __init__.py  behavior.py  core.py  lifespan.py  pivot.py  runner.py  types.py
src/asteria/pas/: __init__.py  core.py  lifespan.py  service.py  types.py
src/asteria/signal/: __init__.py  engine.py  structural.py  types.py
src/asteria/storage/: __init__.py  backtest_writer.py  db.py  malf_writer.py  schema.sql
src/asteria/tuning/: __init__.py
src/asteria/ui/: __init__.py  app.py
tests/: test_analyze_run.py  test_backtest_broker.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_rules.py  test_malf_behavior.py  test_malf_core.py  test_malf_lifespan.py  test_malf_runner_e2e.py  test_pas_core.py  test_pas_lifespan.py  test_signal_engine.py  test_signal_structural.py
(+2 files in other folders)
